syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.tq.microservice.instanceregisterservice";
option java_outer_classname = "InstanceRegisterServiceProto";

package instanceregisterservice;

import "common.proto";

enum InstanceType {
    SERVICE = 0;
    CLIENT = 1;
}

message RegisterRequest {
    InstanceType type = 1;
    common.InstanceId id = 2;
    string service_name = 3;
    string service_version = 4;
}

message RegisterResponse {
}

message QueryServiceRequest {
    string service_name = 1;
    string service_version = 2;
}

message QueryServiceResponse {
    string service_name = 1;
    string service_version = 2;
    repeated common.InstanceId instances = 3;
}

service InstanceRegisterService {
    rpc RegisterInstance(common.Request) returns (common.Response) {}
    rpc QueryService(common.Request) returns (common.Response) {}
}

